css/peutcook.css
#m2 {
  font-family: 'Fredoka One';
}
.contact-us {
  height: auto;
  width: auto;
  background: linear-gradient(to right, #FF4B2B, #ffa64d);
  text-align: center;
  color: white;
  padding: 30px;
  background-color: #fff;
	border-radius: 10px;
  box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
	position: relative;
	overflow: hidden;
	width: 768px;
	max-width: 100%;
	min-height: 100px;
}
p {
	text-align: center;
	font-size: large;
}
#about {
	margin-bottom: 50px;
}


@import url('https://fonts.googleapis.com/css?family=Montserrat:400,800');

* {
	box-sizing: border-box;
}

body {
	background: #f6f5f7;
	display: flex;
	justify-content: center;
	align-items: center;
	flex-direction: column;
	font-family: 'Montserrat', sans-serif;
	height: 290vh;
	margin: -20px 0 50px;
}

h1 {
	font-weight: bold;
	margin: 0;
}

h2 {
	text-align: center;
}

p {
	font-size: 14px;
	font-weight: 100;
	line-height: 20px;
	letter-spacing: 0.5px;
	margin: 20px 0 30px;
}

span {
	font-size: 12px;
}

a {
	color: #333;
	font-size: 14px;
	text-decoration: none;
	margin: 15px 0;
}

button {
	border-radius: 20px;
	border: 1px solid white;
	background-color: #ffa64d;
	color: #FFFFFF;
	font-size: 12px;
	font-weight: bold;
	padding: 12px 45px;
	letter-spacing: 1px;
	text-transform: uppercase;
	transition: transform 80ms ease-in;
}

button:active {
	transform: scale(0.95);
}

button:focus {
	outline: none;
}

button.ghost {
	background-color: transparent;
	border-color: #FFFFFF;
}

form {
	background-color: #FFFFFF;
	display: flex;
	align-items: center;
	justify-content: center;
	flex-direction: column;
	padding: 0 50px;
	height: 100%;
	text-align: center;
}

input {
	background-color: #eee;
	border: none;
	padding: 12px 15px;
	margin: 8px 0;
	width: 100%;
}

.container {
	background-color: #fff;
	border-radius: 10px;
  box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
	position: relative;
	overflow: hidden;
	width: 768px;
	max-width: 100%;
	min-height: 480px;
}

.form-container {
	position: absolute;
	top: 0;
	height: 100%;
	transition: all 0.6s ease-in-out;
}

.sign-in-container {
	left: 0;
	width: 50%;
	z-index: 2;
}

.container.right-panel-active .sign-in-container {
	transform: translateX(100%);
}

.sign-up-container {
	left: 0;
	width: 50%;
	opacity: 0;
	z-index: 1;
}

.container.right-panel-active .sign-up-container {
	transform: translateX(100%);
	opacity: 1;
	z-index: 5;
	animation: show 0.6s;
}

@keyframes show {
	0%, 49.99% {
		opacity: 0;
		z-index: 1;
	}
	
	50%, 100% {
		opacity: 1;
		z-index: 5;
	}
}

.overlay-container {
	position: absolute;
	top: 0;
	left: 50%;
	width: 50%;
	height: 100%;
	overflow: hidden;
	transition: transform 0.6s ease-in-out;
	z-index: 100;
}

.container.right-panel-active .overlay-container{
	transform: translateX(-100%);
}

.overlay {
	background: rgb(255, 189, 65);
	background: -webkit-linear-gradient(to right, #FF4B2B, #ffa64d);
	background: linear-gradient(to right, #FF4B2B, #ffa64d);
	background-repeat: no-repeat;
	background-size: cover;
	background-position: 0 0;
	color: #FFFFFF;
	position: relative;
	left: -100%;
	height: 100%;
	width: 200%;
  transform: translateX(0);
	transition: transform 0.6s ease-in-out;
}

.container.right-panel-active .overlay {
  transform: translateX(50%);
}

.overlay-panel {
	position: absolute;
	display: flex;
	align-items: center;
	justify-content: center;
	flex-direction: column;
	padding: 0 40px;
	text-align: center;
	top: 0;
	height: 100%;
	width: 50%;
	transform: translateX(0);
	transition: transform 0.6s ease-in-out;
}

.overlay-left {
	transform: translateX(-20%);
}

.container.right-panel-active .overlay-left {
	transform: translateX(0);
}

.overlay-right {
	right: 0;
	transform: translateX(0);
}

.container.right-panel-active .overlay-right {
	transform: translateX(20%);
}



footer {
	padding-top: 50px;
}

footer p {
	margin: 10px 0;
}

footer i {
	color: red;
}

footer a {
	color: #3c97bf;
	text-decoration: none;
}

#facebook{
	padding-left:  180px ;
	padding-right: 50px;
}
#whatsapp{
	padding-right: 50px;
}


ol li {
	list-style: none;
	display: inline-block;
}
.containerOne {
  top: 200px ;
	width: 100%;
	height: auto;
  /* padding-right: 10px;
  padding-left: 10px; */
  margin-right: auto;
  margin-left: auto;
}
ol li a {
	text-decoration: none;
  color: white;
  font-size: 30px;
	padding: 0 20px;
}
.one{
	position: absolute;
  top: 85%;
  left: 50%;
  font-size: 45px;
  color: white;
  transform: translate(-50%, -50%);
}
.two{
	position: absolute;
  top: 85%;
  left: 50%;
  font-size: 45px;
  color: white;
  transform: translate(-50%, -50%);
}
.three{
    position: absolute;
    top: 85%;
    left: 50%;
    font-size: 45px;
    color: white;
    transform: translate(-50%, -50%);
}
.four{
    position: absolute;
    top: 85%;
    left: 50%;
    font-size: 45px;
    color: white;
    transform: translate(-50%, -50%);
}
.tit{
    position: absolute;
    top: 20%;
    left: 50%;
    font-size: 65px;
    color: white;
    transform: translate(-50%, -50%);
    font-family: cursive;
}
.first{
	position: absolute;
  top: 8px;
  left: 16px;
}
      
      
 

